--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dvd-slideshow-0.8.4-2.tar.gz": d4d9494437fa454c525a58a0ea0a4e1488ecb768
+  dvd-slideshow-0.8.6-1.tar.gz: 383f4e6ee33e8c344ccc484f61dd868c714b49dd
